added responsiveness for tablets, laptops, and monitors

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <img src="imgs/project2_img.png" alt="" class="projectImg" id="project2Img">
                       </div>
                     <div class="projectWordContainer">
-                        <div class="projectTitle">Footbal Game Predictor</div>
+                        <div class="projectTitle">Football Game Predictor</div>
                         <div class="projectDescription">-> ML model predictor for game results in the MWC league of the 2023 season.</div>
                     </div>
                 </div>
